# esbmc-ai

./: .containerignore  .env.example  .gitignore  .pylintrc  CLA.md  CLAUDE.md  CONTRIB  Containerfile  DOCUMENTATION.md  LICENSE  Pipfile  README.md  build.sh  clean.sh  config.json  config.toml  esbmc-ai  esbmc-ai-config  esbmc_ai.py  main.py  pyproject.toml  requirements.txt  upload.sh
.github/: FUNDING.yml
.github/workflows/: cla.yml  deploy-container.yml  pages.yml  pytest.yml  weekly-prerelease.yml  workflow.yml
config/: initial_prompt.txt  system.json
esbmc_ai/: __about__.py  __init__.py  __main__.py  addon_loader.py  ai_models.py  api_key_collection.py  base_chat_interface.py  base_component.py  base_component_config.py  base_config.py  chat_command.py  chat_response.py  command_result.py  command_runner.py  component_loader.py  component_manager.py  config.py  config_field.py  esbmc_loop_parser.py  esbmc_loops.py  esbmc_util.py  issue.py  latest_state_solution_generator.py  loading_widget.py  log_categories.py  log_handlers.py  log_utils.py  logging.py  optimize_code.py  program_trace.py  prompt_utils.py  reverse_order_solution_generator.py  singleton.py  solution.py  solution_generator.py  user_chat.py  verifier_output.py  verifier_runner.py
esbmc_ai/chats/: __init__.py  base_chat_interface.py  key_template_renderer.py  latest_state_solution_generator.py  reverse_order_solution_generator.py  solution_generator.py  template_funcs.py  template_key_provider.py  template_renderer.py  user_chat.py
esbmc_ai/commands/: __init__.py  chat_command.py  command_result.py  config_info_command.py  debug_config.py  esbmc_loop_analysis_command.py  exit_command.py  fix_code_command.py  help_command.py  help_config.py  license_command.py  list_models_command.py  reload_models_command.py  user_chat_command.py  verify_code_command.py
esbmc_ai/frontend/: solution.py
esbmc_ai/testing/: base_tester.py
esbmc_ai/verifiers/: __init__.py  base_source_verifier.py  clang.py  cmd_oracle.py  dummy_verifier.py  esbmc.py  esbmc_util.py  pytest_verifier.py
esbmc_ai/verifiers/esbmc/: __init__.py  loop_parser.py
esbmc_ai_config/: __main__.py  context.py  context_manager.py
esbmc_ai_config/contexts/: __init__.py  ai_config_menu.py  base_menu.py  dialog_context.py  env_menu.py  esbmc_menu.py  list_select_dialog.py  main_menu.py  save_menu.py
esbmc_ai_config/contexts/esbmc_menu/: __init__.py  esbmc_manage.py  esbmc_menu.py  esbmc_params.py
esbmc_ai_config/models/: __init__.py  config_loader.py  config_manager.py  env_config_loader.py  json_config_loader.py
esbmc_ai_config/widgets/: back_button.py  text_input_button.py
esbmc_ai_lib/: __init__.py  __main__.py  ai_models.py  api_key_collection.py  base_chat_interface.py  chat_response.py  config.py  conv_summarizer.py  esbmc_util.py  loading_widget.py  logging.py  main.py  msg_bus.py  optimize_code.py  solution_generator.py  term.py  user_chat.py
esbmc_ai_lib/commands/: __init__.py  chat_command.py  exit_command.py  fix_code_command.py  help_command.py  optimize_code_command.py  verify_code_command.py
esbmc_ai_lib/frontend/: ast.py  ast_decl.py  c_types.py  esbmc_code_generator.py  solution.py
myenv/: pyvenv.cfg
notebooks/: ast.ipynb
notebooks/samples/: typedefs.c
path/to/your/virtualenv/: pyvenv.cfg
samples/: add_last_unsafe.c  automatic_arrays.c  branches.c  bubble_sort.c  dijkstra_safe.c  dijkstra_unsafe.c  dynamic_mem_alloc.c  hello_world.c  huffman.c  mem_leak.c  optimize_code_test_01.c  threading.c  threading_broken.c  unsafe_access.c
samples/ast/: function_test_1.c  function_test_2.c
samples/optimize-code/: fact_01.c  ll.c  mult.c  sign_check.c  sign_check_hard.c  str_copy.c
samples/timer/src/: clock.c  clock.h  main.c  timer.c  timer.h
scripts/: function_equivalence.c
scripts/container/: build.sh  entrypoint.sh
signatures/v1/: cla.json
src/: ai_models.py  base_chat_interface.py  chat.py  config.py  esbmc.py  loading_widget.py  solution_generator.py  user_chat.py
src/commands/: exit_command.py  fix_code_command.py  help_command.py  verify_code_command.py
tests/: conftest.py  test_ai_models.py  test_ast.py  test_ast_decl.py  test_base_chat_interface.py  test_command_parser.py  test_config.py  test_esbmc.py  test_esbmc_code_generator.py  test_esbmc_util.py  test_latest_state_solution_generator.py  test_output_reducer.py  test_pytest_verifier.py  test_reverse_order_solution_generator.py  test_singleton.py  test_solution.py  test_solution_generator.py  test_template_renderer.py  test_user_chat.py  test_verifier_output.py  unsafe_access.c
tests/data/pytest_output/: failure_only_output.txt  mixed_results_output.txt  success_output.txt
tests/oracle_verifier/: __init__.py  pytest.py
tests/regtest/: test_ast.py  test_base_chat_interface.py  test_solution_generator.py
tests/regtest/_regtest_outputs/: test_base_chat_interface.test_push_message_stack.out  test_base_chat_interface.test_send_message.out  test_solution_generator.test_generate_solution.out
tests/samples/esbmc_output/: bubble_sort.txt  dijkstra_unsafe.txt
tests/samples/esbmc_output/clang_parse_errors/: threading.c
tests/samples/esbmc_output/line_test/: cartpole_48_safe.c-amalgamation-6.c  cartpole_92_safe.c-amalgamation-14.c  cartpole_95_safe.c-amalgamation-80.c  robot_5_safe.c-amalgamation-13.c  vdp_1_safe.c-amalgamation-28.c
tests/samples/solutions/test-nested-includes/additional/include/: header.h
tests/samples/solutions/test-nested-includes/common/include/: common.h
website/: hugo.yaml
website/content/: _index.md  about.md
website/content/docs/: AI-Models.md  Architecture.md  Fix-Code-Mode.md  Initial-Setup.md  Optimize-Code-Mode.md  User-Chat-Mode.md  _index.md  addons.md  build.md  configuring-esbmc-ai.md  contributing.md  initial-setup.md  usage.md
website/content/docs/architecture/: _index.md  base-component.md  variable-substitution.md
website/content/docs/commands/: _index.md  fix-code-mode.md  optimize-code-mode.md  user-chat-mode.md
website/content/news/: _index.md
website/i18n/: en.toml
