[project]
name = "esbmc_ai"
description = "LLM driven development and automatic repair kit."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE"]
authors = [
  { name = "Yiannis Charalambous", email = "yiannis128@hotmail.com" },
]
keywords = [
  "AI",
  "LLM",
  "automated code repair",
  "esbmc",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3",
]
dependencies = [
  "blessed",
  "langchain",
  "langchain-anthropic",
  "langchain-community",
  "langchain-ollama",
  "langchain-openai",
  "lizard",
  "platformdirs",
  "python-dotenv",
  "regex",
  "torch",  # Needed by transformers
  "transformers",  # Needed by langchain-core to calculate get_token_ids
]
# https://hatch.pypa.io/latest/version/
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/esbmc/esbmc-ai/wiki"
Homepage = "https://github.com/esbmc/esbmc-ai"
Issues = "https://github.com/esbmc/esbmc-ai/issues"
"Source Code" = "https://github.com/esbmc/esbmc-ai"

[project.scripts]
esbmc-ai = "esbmc_ai.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "esbmc_ai/__about__.py"

[tool.hatch.envs.default]
description = "Default environment. Used for development."
dependencies = [
  "pylint",
  "ipykernel",
  "py",  # Dependency of pytest-regtest
  "twine",
]

[tool.hatch.envs.default.scripts]
podman-build = """
if [ -z $(command -v podman) ]; then
  echo "Podman not installed..."
  exit 1
fi
podman build --tag esbmc-ai --build-arg EXTRA_PIP_PACKAGES="{args}" .
"""

docker-build = """
if [ -z $(command -v docker) ]; then
  echo "Docker not installed..."
  exit 1
fi
docker build --tag esbmc-ai --build-arg EXTRA_PIP_PACKAGES="{args}" .
"""

[tool.hatch.envs.hatch-test]
description = "Used when running pytest. Using hatch test..."
extra-dependencies = [
  "pytest",
  "pytest-subtests",
  "pytest-cov",
  "pytest-regtest",
]

[tool.hatch.build.targets.sdist]
include = ["/esbmc_ai"]
# exclude = ["**/*"]
# packages = ["esbmc_ai"]

[tool.hatch.build.targets.wheel]
include = ["/esbmc_ai"]
# exclude = ["**/*"]
# packages = ["esbmc_ai"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
